--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,11 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".tsx", ".ts"] }],
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".tsx", ".ts", ".types.ts"] }
+    ],
+    "react/prop-types": "off",
     "import/prefer-default-export": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
