--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "material-table": "^1.69.2",
     "react": "^17.0.1",
+    "jest-canvas-mock": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
